Prueba de IU & BrowseHistory

--- a/src/App.css
+++ b/src/App.css
@@ -232,7 +232,10 @@ template {
 
 /* App */
 
+body {
+    background-color: #eee;
+}
+
 .app {
-    color: #f00;
-    display: flex;
+    padding-top: 70px;
 }
