--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,7 @@
 .header {
     background-color: #ffe600;
     height: 54px;
+    margin-top: -70px;
     border-bottom: 1px solid #d9d9d9;
     position: fixed;
     z-index: 100;
