--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,5 +6,59 @@
     position: fixed;
     z-index: 100;
     box-sizing: border-box;
+    left: 0;
+    right: 0;
+}
+
+.header-logo {
+    margin: 7px 0 0 40px;
+    display: inline-block;
+    float: left;
+}
+
+.header-form {
+    padding: 10px 20px;
+    float: left;
+    position: absolute;
+    box-sizing: border-box;
+    right: 40px;
+    left: 90px;
+}
+
+.header-input {
+    border: 1px solid #fff;
+    border-radius: 3px 0 0 3px;
+    background-color: #fff;
+    font-size: 16px;
+    line-height: 1;
+    padding: 5px 60px 5px 15px;
     width: 100%;
+    height: 32px;
+    box-sizing: border-box;
+}
+
+.header-input:focus {
+    border-color: #ddd;
+    outline: none;
+}
+
+.header-submit {
+    position: absolute;
+    right: 0;
+    top: 10px;
+    height: 32px;
+    background: #ddd;
+    border: #ddd;
+    width: 32px;
+    overflow: hidden;
+    text-indent: -10000px;
+    cursor: pointer;
+}
+
+.header-submit:before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: url(/search.png) no-repeat center center;
 }
